tests/errors/semantic/blocking/functions_in_uniontype.py
# pylint: disable=missing-function-docstring, missing-module-docstring

def f(g : '(int)(int)|(float)(float)', a : 'int|float'):
    return g(a)
